# rayquaza

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: 2d_camera.rs  basic_shapes.rs  basic_window.rs  bezier_line.rs  bouncing_ball.rs  collision_area.rs  color_palette.rs  draw_font.rs  draw_texture.rs  gamepad_input.rs  keyboard_input.rs  mouse_input.rs  mouse_wheel_input.rs
examples/core/: basic_window.rs  keyboard_input.rs  mouse_input.rs  mouse_wheel_input.rs
src/: camera.rs  collision.rs  color.rs  cursor.rs  drawing.rs  error.rs  ffi.rs  input.rs  lib.rs  math.rs  misc.rs  result.rs  shapes.rs  text.rs  texture.rs  timing.rs  window.rs
src/core/: color.rs  drawing.rs  error.rs  input.rs  math.rs  mod.rs  result.rs  texture.rs  window.rs
src/ffi/: mod.rs
