[package]
name = "rayquaza"
version = "1.0.0-dev.1"
authors = ["Mickaël Malécot <mickael.malecot@gmail.com>"]
edition = "2018"
description = "Idiomatic wrapper for raylib"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["bindings", "wrapper", "raylib", "game", "engine"]
categories = ["api-bindings", "game-engines"]
homepage = "https://github.com/mmalecot/rayquaza"
documentation = "https://docs.rs/rayquaza"
repository = "https://github.com/mmalecot/rayquaza"
exclude = [".github/*", "examples/*", "resources/*"]

[profile.release]
lto = true

[build-dependencies]
cmake = { version = "0.1", default-features = false }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
tar = { version = "0.4", default-features = false }
ureq = { version = "0.12", default-features = false, features = ["tls"] }

[features]
default = []
