[package]
name = "rayquaza"
version = "1.0.0-dev.1"
authors = ["Mickaël Malécot <mickael.malecot@gmail.com>"]
edition = "2018"
description = "Idiomatic wrapper for raylib"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["bindings", "wrapper", "raylib", "game", "engine"]
categories = ["api-bindings", "game-engines"]
homepage = "https://github.com/mmalecot/rayquaza"
documentation = "https://docs.rs/rayquaza"
repository = "https://github.com/mmalecot/rayquaza"
exclude = [".github/*", "examples/*", "resources/*"]

[profile.release]
lto = true

[build-dependencies]
cmake = { version = "0.1", default-features = false }
fs_extra = { version = "1.2", default-features = false }
